# audio-thumbnailer

./: .gitignore  Cargo.toml  Makefile  README.md  audio.thumbnailer  build.rs  mp3-thumbnailer.thumbnailer
src/: aspect_ratio.rs  color.rs  decoder.rs  error.rs  interpol.rs  main.rs
src/args/: aspect_ratio.rs  interpol.rs  mod.rs  size.rs
src/audio/: mod.rs  symphonia.rs
src/config/: args.rs  enums.rs  example_config.toml  file.rs  mod.rs  structs.rs
src/config/parsers/: aspect_ratio.rs  config.example  interpol.rs  mod.rs
src/decode/: midi.rs  mod.rs  opus.rs  symphonia.rs
src/decoders/: mod.rs  symphonia.rs
src/demuxers/: mod.rs  symphonia.rs
src/image/: color.rs  cover_art.rs  midi.rs  mod.rs  waveform.rs
src/images/: cover_art.rs  mod.rs  waveform.rs  wavetable.rs
test/: 2_pluh.aac  2_pluh.aiff  2_pluh.flac  2_pluh.mkv  2_pluh.mp2  2_pluh.opus  fish.opus  fish.wv
test/fish/: fish.aac  fish.caf  fish.flac  fish.m4a  fish.mka
