[package]
name = "audio-thumbnailer"
version = "0.3.1"
edition = "2021"
license = "MIT"
authors = ["_eyewave"]
description = "Fast multipurpose thumbnailer for creating audio thumbnails on linux."
repository = "https://github.com/eye-wave/audio-thumbnailer"

[dependencies]
anyhow = "^1.0.95"
clap = { version = "^4.5.4", features = ["derive"] }
csscolorparser = { version = "^0.6.2", features = ["rgb", "named-colors"] }
image = "^0.25.1"
midly = "^0.5.3"
ogg-opus = "^0.1.2"
rayon = "^1.10.0"
rustfft = "^6.2.0"
symphonia = { version = "^0.5.4", features = ["all"] }
symphonia-core = "^0.5.4"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
incremental = false
lto = true
panic = "abort"
strip = true
